# ml-pipelines

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: deploy.yml  deploy.yml.off
feature_store/: config.yml  feature_views.py  setup_feature_store.py
january_ml/: __init__.py  constants.py  snowflake_env.py  utils.py
ml_utils/: __init__.py  snowflake_env.py
project_template/: config.yml  inference.ipynb  training.ipynb  training.py  utils.py
projects/example_project/: config.yml  inference.py  pip-requirements.txt  prepare_data.py  promote_model.py  test.ipynb  training.ipynb  training.py  utils.py
projects/project_template/: beep.py  blorp.py  boop.py  cleanup.py  config.yml  create_monitor.py  inference.ipynb  inference.py  project-requirements.txt  promote_model.py  training.ipynb  training.py  utils.py
projects/time_of_day_clustering/: README.md  config.yml  inference.py  project-requirements.txt  training.py  utils.py
scripts/: cleanup.py  constants.py  create_project.py  create_project.sh  deploy_project.py  task_wrapper.py
setup/: setup.sql
shared_utils/: utils.py
template/: config.yml  pip-requirements.txt  utils.py
