[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_utils"
version = "0.0.1"
description = "Internal utilities for ML"
readme = "ml_utils/README.md"
requires-python = ">=3.10"
dependencies = [
    "snowflake-snowpark-python",
    "snowflake-ml-python",
    "snowflake-core",
    "pyyaml",
]

[tool.setuptools]
packages = ["ml_utils"]